--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="app_name">Arma Connect</string>
     <string name="menu_MapGPS">Map/GPS</string>
     <string name="menu_DateTime">Watch</string>
+    <string name="menu_Weather">Weather</string>
     <string name="menu_Settings">Settings</string>
     <string name="settings_keepscreenon">Keep Screen On (No Sleeping)</string>
     <string name="connecting_message">Waiting for Arma game connection&#8230;</string>
